--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic-native/camera": "^3.4.4",
+    "@ionic-native/core": "^3.4.4",
+    "@ionic-native/file": "^3.4.4",
+    "@ionic-native/file-path": "^3.4.4",
+    "@ionic-native/transfer": "^3.4.4",
     "@ionic/storage": "2.0.0",
     "angular2-jwt": "0.2.0",
     "auth0-lock": "10.14.0",
