--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "^3.4.4",
     "@ionic-native/file": "^3.4.4",
     "@ionic-native/file-path": "^3.4.4",
+    "@ionic-native/social-sharing": "^3.4.4",
     "@ionic-native/transfer": "^3.4.4",
     "@ionic/storage": "2.0.0",
     "angular2-jwt": "0.2.0",
