--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/camera": "^3.4.4",
-    "@ionic-native/core": "3.5.0",
-    "@ionic-native/splash-screen": "3.5.0",
-    "@ionic-native/status-bar": "3.5.0",
-    "@ionic/storage": "2.0.1",
-    "@ionic-native/file": "^3.4.4",
-    "@ionic-native/file-path": "^3.4.4",
-    "@ionic-native/image-picker": "^3.5.0",
-    "@ionic-native/social-sharing": "^3.4.4",
-    "@ionic-native/transfer": "^3.4.4",
+    "@ionic-native/camera": "^3.13.0",
+    "@ionic-native/core": "^3.5.0",
+    "@ionic-native/file": "^3.13.0",
+    "@ionic-native/file-path": "^3.13.0",
+    "@ionic-native/image-picker": "^3.13.0",
+    "@ionic-native/social-sharing": "^3.13.0",
+    "@ionic-native/splash-screen": "^3.5.0",
+    "@ionic-native/status-bar": "^3.5.0",
+    "@ionic-native/transfer": "^3.13.0",
     "@ionic/storage": "2.0.0",
     "angular2-jwt": "0.2.0",
     "auth0-lock": "10.14.0",
-    "ionic-angular": "3.0.1",
-    "ionicons": "3.0.0",
+    "ionic-angular": "^3.0.1",
     "ionic-native": "2.9.0",
+    "ionicons": "3.0.0",
     "rxjs": "5.3.0",
-    "tinymce": "^4.5.6",
+    "tinymce": "^4.6.4",
     "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^1.0.0",
-    "typescript": "~2.2.1",
-    "sw-toolbox": "3.4.0"
+    "@ionic/app-scripts": "1.3.12",
+    "@ionic/cli-plugin-cordova": "^1.4.0",
+    "@ionic/cli-plugin-ionic-angular": "1.3.1",
+    "typescript": "2.3.4"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
