--- a/package.json
+++ b/package.json
@@ -18,25 +18,30 @@
     "@angular/http": "^4.4.7",
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/platform-server": "2.4.8",
+    "@angular/platform-server": "^2.4.8",
     "@ionic-native/camera": "^3.14.0",
     "@ionic-native/core": "^3.14.0",
     "@ionic-native/file": "^3.14.0",
     "@ionic-native/file-path": "^3.14.0",
     "@ionic-native/image-picker": "^3.14.0",
-    "@ionic-native/social-sharing": "^3.14.0",
     "@ionic-native/splash-screen": "^3.14.0",
     "@ionic-native/status-bar": "^3.14.0",
     "@ionic-native/transfer": "^3.14.0",
-    "@ionic/storage": "2.0.0",
-    "angular2-jwt": "0.2.0",
-    "auth0-lock": "10.14.0",
+    "@ionic/storage": "^2.0.0",
+    "angular2-jwt": "^0.2.0",
+    "auth0-lock": "^10.14.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "^3.9.2",
-    "ionic-native": "2.9.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.3.0",
+    "ionic-native": "^2.9.0",
+    "ionicons": "^3.0.0",
+    "rxjs": "^5.3.0",
     "tinymce": "^4.7.12",
-    "zone.js": "0.8.5"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.12",
@@ -45,11 +50,22 @@
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
     "cordova-plugin-statusbar",
-    "cordova-plugin-console",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "deals: An Ionic project"
+  "description": "deals: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios"
+    ]
+  }
 }
